--- a/index.HTML
+++ b/index.HTML
@@ -32,15 +32,15 @@
         }
 
         /* Main logo styles */
-       .main-logo {
+.main-logo {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 50px; /* Added padding from the top */
 }
 
 .main-logo img {
-    width: 500px; /* Default width for desktop */
-    max-width: 100%; /* Ensures the image doesn't exceed its container's width */
-    height: auto; /* Maintains aspect ratio */
+    max-width: 100%;
+    height: auto;
+    width: 500px; /* Adjusted logo size */
 }
 
 /* Media query for smaller screens */
