--- a/index.HTML
+++ b/index.HTML
@@ -35,6 +35,7 @@
 .main-logo {
     text-align: center;
     margin-top: 50px; /* Added padding from the top */
+margin-bottom: 20px;
 }
 
 .main-logo img {
