--- a/index.HTML
+++ b/index.HTML
@@ -35,13 +35,31 @@
 .main-logo {
     text-align: center;
     margin-top: 50px; /* Added padding from the top */
-margin-bottom: 20px;
+    margin-bottom: 20px; /* Added margin from the video container */
+    position: relative; /* Required for positioning pseudo-element */
 }
 
-.main-logo img {
-    max-width: 100%;
-    height: auto;
-    width: 500px; /* Adjusted logo size */
+.main-logo::after {
+    content: "";
+    position: absolute;
+    top: -20px; /* Adjust position as needed */
+    left: -20px; /* Adjust position as needed */
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: rgba(0, 168, 255, 0.5); /* Bright bluish color with transparency */
+    animation: spread 2s ease-out infinite; /* Animation to make the light spread */
+}
+
+@keyframes spread {
+    0% {
+        transform: scale(0.5); /* Initial scale */
+        opacity: 1; /* Initial opacity */
+    }
+    100% {
+        transform: scale(2); /* Final scale */
+        opacity: 0; /* Final opacity */
+    }
 }
 
 /* Media query for smaller screens */
