--- a/index.HTML
+++ b/index.HTML
@@ -34,22 +34,14 @@
         /* Main logo styles */
 .main-logo {
     text-align: center;
-    margin-top: 50px; /* Adjust as needed */
-    margin-bottom: 20px; /* Adjust as needed */
-    position: relative;
+    margin-top: 50px; /* Added padding from the top */
+margin-bottom: 20px;
 }
 
 .main-logo img {
     max-width: 100%;
     height: auto;
-    width: 200px; /* Adjust size as needed */
-    box-shadow: 0 0 20px 10px rgba(0, 168, 255, 0.7); /* Adjust the color and size of the glow */
-}
-/* Media query for smaller screens */
-@media screen and (max-width: 768px) {
-    .main-logo img {
-        width: 80%; /* Adjust as needed for smaller screens */
-    }
+    width: 500px; /* Adjusted logo size */
 }
 
         body {
