--- a/index.HTML
+++ b/index.HTML
@@ -44,6 +44,13 @@ margin-bottom: 20px;
     width: 500px; /* Adjusted logo size */
 }
 
+/* Media query for smaller screens */
+@media screen and (max-width: 768px) {
+    .main-logo img {
+        width: 80%; /* Adjust as needed for smaller screens */
+    }
+}
+
         body {
             background-color: #000e24;
             margin: 0;
