--- a/index.HTML
+++ b/index.HTML
@@ -163,14 +163,14 @@ margin-bottom: 20px;
             background-color: white;
             width: 45%;
         }
-
-        .normal-text-container {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            margin-top: 2vw;
-            font-size: 1.5vw;
-        }
+.normal-text-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center; /* Add this line to horizontally center content */
+    margin-top: 2vw;
+    font-size: 1.5vw;
+}
 
         .line-left,
         .line-right {
