--- a/index.HTML
+++ b/index.HTML
@@ -70,17 +70,17 @@ margin-bottom: 20px;
             height: auto;
         }
 
-  .container {
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 70vh;
-    max-width: 80%;
+    width: 100%; /* Change from max-width: 80%; to width: 100%; */
     margin: 0 auto;
     overflow: hidden;
     position: relative;
     padding: 10px;
-    padding-right: 37px; /* Add right padding to prevent cutting off */
+    padding-right: 37px;
 }
         .container::before {
             content: "";
