--- a/index.HTML
+++ b/index.HTML
@@ -75,12 +75,20 @@ margin-bottom: 20px;
     flex-direction: column;
     align-items: center;
     min-height: 70vh;
-    width: 80%; /* Change from max-width: 80%; to width: 100%; */
+    width: 80%; /* Initial width */
     margin: 0 auto;
     overflow: hidden;
     position: relative;
     padding: 10px;
     padding-right: 37px;
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 100%; /* Adjust to occupy full width on smaller screens */
+        padding: 10px; /* Adjust padding if needed */
+        justify-content: center; /* Center content vertically */
+    }
 }
         .container::before {
             content: "";
