--- a/index.HTML
+++ b/index.HTML
@@ -76,7 +76,7 @@ margin-bottom: 20px;
     align-items: center;
     min-height: 70vh;
     width: 70%; /* Initial width */
-    margin: 0 auto;
+    margin: auto;
     overflow: hidden;
     position: relative;
     padding: 10px;
