--- a/index.HTML
+++ b/index.HTML
@@ -290,7 +290,7 @@
     </div>
 
     <div class="footer-logo">
-        <img src="img/footer-logo.svg" alt="Footer Logo">
+        <img src="img/logo.svg" alt="Footer Logo">
     </div>
 
     <div class="footer-line"></div>
