--- a/index.HTML
+++ b/index.HTML
@@ -235,9 +235,8 @@
             background-color: #000e24;
             box-shadow: 0 0 4vw #00306f;
         }
-
-        .footer-logo {
-    position: fixed;
+.footer-logo {
+    position: absolute;
     bottom: 0;
     left: 20px; /* Adjust as needed */
     width: 213px;
