--- a/index.HTML
+++ b/index.HTML
@@ -237,7 +237,7 @@
         }
 .footer-logo {
     position: absolute;
-    bottom: 0;
+    bottom: calc(10vh + 5vw); /* Adjust as needed */
     left: 20px; /* Adjust as needed */
     width: 213px;
     z-index: 20;
