--- a/index.HTML
+++ b/index.HTML
@@ -237,10 +237,11 @@
         }
 .footer-logo {
     position: absolute;
-    bottom: -98px; /* Adjust as needed */
-    left: 20px; /* Adjust as needed */
+    bottom: 20px; /* Adjust the distance from the bottom */
+    left: 20px; /* Adjust the distance from the left */
     width: 213px;
     height: 83px;
+    z-index: 20; /* Ensure the logo is above other elements */
 }
         /* Footer */
         .footer-line {
