--- a/index.HTML
+++ b/index.HTML
@@ -238,8 +238,8 @@
 .footer-logo {
     bottom: 20px; /* Adjust the distance from the bottom */
     left: 20px; /* Adjust the distance from the left */
-    width: 213px;
-    height: 83px;
+    width: 150px;
+    height: auto;
     z-index: 20; /* Ensure the logo is above other elements */
 }
         /* Footer */
