--- a/index.HTML
+++ b/index.HTML
@@ -242,6 +242,11 @@
     height: auto;
     z-index: 20; /* Ensure the logo is above other elements */
 }
+
+.footer-logo img {
+    width: 150px; /* Adjust the width as needed */
+    height: auto; /* Automatically adjust height to maintain aspect ratio */
+}
         /* Footer */
         .footer-line {
             position: fixed;
