--- a/index.HTML
+++ b/index.HTML
@@ -246,6 +246,8 @@
 .footer-logo img {
     width: 210px; /* Adjust the width as needed */
     height: auto; /* Automatically adjust height to maintain aspect ratio */
+
+ left: 20px;
 }
         /* Footer */
         .footer-line {
