--- a/index.HTML
+++ b/index.HTML
@@ -235,29 +235,34 @@
             background-color: #000e24;
             box-shadow: 0 0 4vw #00306f;
         }
-.footer-logo {
-    bottom: 20px; /* Adjust the distance from the bottom */
-    left: 20px; /* Adjust the distance from the left */
-    width: 150px;
-    height: auto;
-    z-index: 20; /* Ensure the logo is above other elements */
-}
 
-.footer-logo img {
-    width: 210px; /* Adjust the width as needed */
-    height: auto; /* Automatically adjust height to maintain aspect ratio */
+        .footer-logo {
+            position: absolute;
+            bottom: -98px; /* Adjust as needed */
+            left: 20px; /* Adjust as needed */
+            width: 150px;
+            height: auto;
+        }
 
- left: 20px;
-}
-        /* Footer */
         .footer-line {
-            position: fixed;
-            bottom: 0;
-            left: 0;
+            position: relative;
             width: 100%;
             height: 2px;
             background-color: rgba(0, 112, 254, 0.6);
             z-index: 30;
+        }
+
+        .social-icons {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        .social-icons img {
+            height: 17px;
+            object-fit: contain;
+            margin: 0 10px; /* Adjust margin as needed */
         }
     </style>
 </head>
@@ -298,6 +303,11 @@
     </div>
 
     <div class="footer-line"></div>
+
+    <div class="social-icons">
+        <img src="img/youtube.svg" alt="YouTube">
+        <img src="img/twitter.svg" alt="Twitter">
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
