--- a/index.HTML
+++ b/index.HTML
@@ -237,12 +237,16 @@
         }
 
         .footer-logo {
-            position: absolute;
+    
             bottom: -98px; /* Adjust as needed */
             left: 20px; /* Adjust as needed */
             width: 150px;
             height: auto;
         }
+.footer-logo img {
+    width: 233px; /* Adjust the width as needed */
+    height: auto; /* Automatically adjust height to maintain aspect ratio */
+}
 
         .footer-line {
             position: relative;
