--- a/index.HTML
+++ b/index.HTML
@@ -256,12 +256,12 @@
             z-index: 30;
         }
 
-        .social-icons {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
-        }
+       .social-icons {
+    display: flex;
+    justify-content: flex-start; /* Change from center to flex-start */
+    align-items: center;
+    margin-top: 20px;
+}
 
         .social-icons img {
             height: 17px;
