--- a/index.HTML
+++ b/index.HTML
@@ -246,6 +246,7 @@
 .footer-logo img {
     width: 233px; /* Adjust the width as needed */
     height: auto; /* Automatically adjust height to maintain aspect ratio */
+margin-left: 20px;
 }
 
         .footer-line {
@@ -261,6 +262,7 @@
     justify-content: flex-start; /* Change from center to flex-start */
     align-items: center;
     margin-top: 20px;
+margin-left: 20px;
 }
 
         .social-icons img {
