--- a/index.HTML
+++ b/index.HTML
@@ -265,11 +265,17 @@ margin-left: 20px;
 margin-left: 20px;
 }
 
-        .social-icons img {
-            height: 17px;
-            object-fit: contain;
-            margin: 0 10px; /* Adjust margin as needed */
-        }
+ .social-icons img {
+    height: 17px;
+    object-fit: contain;
+    margin: 0 10px; /* Adjust margin as needed */
+    border-radius: 50%; /* Make the images round */
+    transition: background-color 0.3s; /* Add transition effect */
+}
+
+.social-icons img:hover {
+    background-color: blue; /* Change background color on hover */
+}
     </style>
 </head>
 <body>
