--- a/index.HTML
+++ b/index.HTML
@@ -276,6 +276,20 @@ margin-left: 20px;
 .social-icons img:hover {
     filter: brightness(1.2); /* Increase brightness on hover */
 }
+
+.copyright {
+    text-align: right;
+    font-family: 'Rubik', sans-serif;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    z-index: 20;
+    opacity: 0.7;
+    color: rgb(183, 195, 209);
+    margin-top: 20px;
+    margin-right: 20px;
+}
     </style>
 </head>
 <body>
@@ -320,8 +334,8 @@ margin-left: 20px;
         <img src="img/youtube.svg" alt="YouTube">
         <img src="img/twitter.svg" alt="Twitter">
     </div>
-<br>
-
+    
+    <div class="copyright">© 2024 Onlybeach. All Rights Reserved</div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
