--- a/index.HTML
+++ b/index.HTML
@@ -278,7 +278,7 @@ margin-left: 20px;
 }
 
 .copyright {
-    text-align: right;
+    text-align: center; /* Align text to the center */
     font-family: 'Rubik', sans-serif;
     font-size: 19px;
     font-style: normal;
@@ -288,13 +288,12 @@ margin-left: 20px;
     opacity: 0.7;
     color: rgb(183, 195, 209);
     margin-top: 20px;
-    margin-right: 20px;
 }
 .social-container {
     display: flex;
     align-items: center;
+    justify-content: center; /* Center the content horizontally */
     margin-top: 20px;
-    margin-right: 20px;
 }
     </style>
 </head>
