--- a/index.HTML
+++ b/index.HTML
@@ -237,17 +237,17 @@
         }
 
         .footer-logo {
-    
             bottom: -98px; /* Adjust as needed */
             left: 20px; /* Adjust as needed */
             width: 150px;
             height: auto;
         }
-.footer-logo img {
-    width: 233px; /* Adjust the width as needed */
-    height: auto; /* Automatically adjust height to maintain aspect ratio */
-margin-left: 20px;
-}
+
+        .footer-logo img {
+            width: 233px; /* Adjust the width as needed */
+            height: auto; /* Automatically adjust height to maintain aspect ratio */
+            margin-left: 20px;
+        }
 
         .footer-line {
             position: relative;
@@ -257,44 +257,45 @@ margin-left: 20px;
             z-index: 30;
         }
 
-       .social-icons {
-    display: flex;
-    justify-content: flex-start; /* Change from center to flex-start */
-    align-items: center;
-    margin-top: 20px;
-margin-left: 20px;
-}
+        .social-icons {
+            display: flex;
+            justify-content: flex-start; /* Change from center to flex-start */
+            align-items: center;
+            margin-top: 20px;
+            margin-left: 20px;
+        }
 
-.social-icons img {
-    height: 17px;
-    object-fit: contain;
-    margin: 0 10px; /* Adjust margin as needed */
-    transition: filter 0.3s; /* Add transition effect */
-    filter: brightness(0.8); /* Initial brightness */
-}
+        .social-icons img {
+            height: 17px;
+            object-fit: contain;
+            margin: 0 10px; /* Adjust margin as needed */
+            transition: filter 0.3s; /* Add transition effect */
+            filter: brightness(0.8); /* Initial brightness */
+        }
 
-.social-icons img:hover {
-    filter: brightness(1.2); /* Increase brightness on hover */
-}
+        .social-icons img:hover {
+            filter: brightness(1.2); /* Increase brightness on hover */
+        }
 
-.copyright {
-    text-align: center; /* Align text to the center */
-    font-family: 'Rubik', sans-serif;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    z-index: 20;
-    opacity: 0.7;
-    color: rgb(183, 195, 209);
-    margin-top: 20px;
-}
-.social-container {
-    display: flex;
-    align-items: center;
-    justify-content: center; /* Center the content horizontally */
-    margin-top: 20px;
-}
+        .copyright {
+            text-align: center; /* Align text to the center */
+            font-family: 'Rubik', sans-serif;
+            font-size: 19px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            z-index: 20;
+            opacity: 0.7;
+            color: rgb(183, 195, 209);
+            margin-top: 20px;
+        }
+
+        .copyright-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -335,7 +336,7 @@ margin-left: 20px;
 
     <div class="footer-line"></div>
 
-    <div class="social-container">
+    <div class="copyright-container">
         <div class="social-icons">
             <img src="img/youtube.svg" alt="YouTube">
             <img src="img/twitter.svg" alt="Twitter">
