--- a/index.HTML
+++ b/index.HTML
@@ -277,24 +277,22 @@
             filter: brightness(1.2); /* Increase brightness on hover */
         }
 
-        .copyright {
-            text-align: center; /* Align text to the center */
-            font-family: 'Rubik', sans-serif;
+        .rights-reserved {
+            text-align: center;
+            color: rgb(183, 195, 209);
+            font-family: Rubik;
             font-size: 19px;
             font-style: normal;
             font-weight: 400;
             line-height: normal;
             z-index: 20;
             opacity: 0.7;
-            color: rgb(183, 195, 209);
-            margin-top: 20px;
         }
 
-        .copyright-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
+        @media screen and (min-width: 768px) {
+            .rights-reserved {
+                text-align: right;
+            }
         }
     </style>
 </head>
@@ -336,14 +334,17 @@
 
     <div class="footer-line"></div>
 
-    <div class="copyright-container">
-        <div class="social-icons">
-            <img src="img/youtube.svg" alt="YouTube">
-            <img src="img/twitter.svg" alt="Twitter">
-        </div>
-        <div class="copyright">© 2024 Onlybeach. All Rights Reserved</div>
+    <div class="social-icons">
+        <img src="img/youtube.svg" alt="YouTube">
+        <img src="img/twitter.svg" alt="Twitter">
     </div>
-    
+
+    <div class="rights-reserved">
+        © 2024 Onlybeach. All Rights Reserved
+    </div>
+<br>
+
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             var video = document.querySelector('.background-video');
