--- a/index.HTML
+++ b/index.HTML
@@ -237,17 +237,17 @@
         }
 
         .footer-logo {
+    
             bottom: -98px; /* Adjust as needed */
             left: 20px; /* Adjust as needed */
             width: 150px;
             height: auto;
         }
-
-        .footer-logo img {
-            width: 233px; /* Adjust the width as needed */
-            height: auto; /* Automatically adjust height to maintain aspect ratio */
-            margin-left: 20px;
-        }
+.footer-logo img {
+    width: 233px; /* Adjust the width as needed */
+    height: auto; /* Automatically adjust height to maintain aspect ratio */
+margin-left: 20px;
+}
 
         .footer-line {
             position: relative;
@@ -257,43 +257,26 @@
             z-index: 30;
         }
 
-        .social-icons {
-            display: flex;
-            justify-content: flex-start; /* Change from center to flex-start */
-            align-items: center;
-            margin-top: 20px;
-            margin-left: 20px;
-        }
+       .social-icons {
+    display: flex;
+    justify-content: flex-start; /* Change from center to flex-start */
+    align-items: center;
+    margin-top: 20px;
+margin-left: 20px;
+}
 
-        .social-icons img {
-            height: 17px;
-            object-fit: contain;
-            margin: 0 10px; /* Adjust margin as needed */
-            transition: filter 0.3s; /* Add transition effect */
-            filter: brightness(0.8); /* Initial brightness */
-        }
+.social-icons img {
+    height: 17px;
+    object-fit: contain;
+    margin: 0 10px; /* Adjust margin as needed */
+    transition: filter 0.3s; /* Add transition effect */
+    filter: brightness(0.8); /* Initial brightness */
+}
 
-        .social-icons img:hover {
-            filter: brightness(1.2); /* Increase brightness on hover */
-        }
-
-        .rights-reserved {
-            text-align: center;
-            color: rgb(183, 195, 209);
-            font-family: Rubik;
-            font-size: 19px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            z-index: 20;
-            opacity: 0.7;
-        }
-
-        @media screen and (min-width: 768px) {
-            .rights-reserved {
-                text-align: right;
-            }
-        }
+.social-icons img:hover {
+    filter: brightness(1.2); /* Increase brightness on hover */
+    box-shadow: 0 0 10px rgba(0, 112, 254, 0.6); /* Add glow effect on hover */
+}
     </style>
 </head>
 <body>
