--- a/index.HTML
+++ b/index.HTML
@@ -277,17 +277,18 @@
             filter: brightness(1.2); /* Increase brightness on hover */
         }
 
-        .rights-reserved {
-            text-align: center;
-            color: rgb(183, 195, 209);
-            font-family: Rubik;
-            font-size: 19px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            z-index: 20;
-            opacity: 0.7;
-        }
+  .rights-reserved {
+    text-align: center;
+    color: rgb(183, 195, 209);
+    font-family: Rubik;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    z-index: 20;
+    opacity: 0.7;
+    padding-left: 20px; /* Add padding-left */
+}
 
         @media screen and (min-width: 768px) {
             .rights-reserved {
