--- a/index.HTML
+++ b/index.HTML
@@ -277,23 +277,44 @@
             filter: brightness(1.2); /* Increase brightness on hover */
         }
 
-  .rights-reserved {
-    text-align: center;
-    color: rgb(183, 195, 209);
-    font-family: Rubik;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    z-index: 20;
-    opacity: 0.7;
-    padding-left: 20px; /* Add padding-left */
-}
+        .rights-reserved {
+            text-align: center;
+            color: rgb(183, 195, 209);
+            font-family: Rubik;
+            font-size: 19px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            z-index: 20;
+            opacity: 0.7;
+            padding-left: 20px; /* Add padding-left */
+        }
 
         @media screen and (min-width: 768px) {
             .rights-reserved {
                 text-align: right;
             }
+        }
+
+        .footer-links {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            margin-top: 20px;
+            margin-right: 20px;
+        }
+
+        .footer-link {
+            color: rgb(255, 255, 255);
+            text-align: center;
+            font-family: Poppins;
+            font-size: 22px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 135%;
+            text-decoration: none;
+            cursor: pointer;
+            margin-left: 20px; /* Add margin between links */
         }
     </style>
 </head>
@@ -340,11 +361,14 @@
         <img src="img/twitter.svg" alt="Twitter">
     </div>
 
+    <div class="footer-links">
+        <a href="#" class="footer-link">Terms</a>
+        <a href="#" class="footer-link">Contact Us</a>
+    </div>
+
     <div class="rights-reserved">
         © 2024 Onlybeach. All Rights Reserved
     </div>
-<br>
-
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
