--- a/index.HTML
+++ b/index.HTML
@@ -315,6 +315,11 @@
             text-decoration: none;
             cursor: pointer;
             margin-left: 20px; /* Add margin between links */
+            transition: color 0.3s; /* Add transition effect */
+        }
+
+        .footer-link:hover {
+            color: #FFD700; /* Change color on hover */
         }
     </style>
 </head>
