--- a/index.HTML
+++ b/index.HTML
@@ -319,7 +319,7 @@
         }
 
         .footer-link:hover {
-            color: #FFD700; /* Change color on hover */
+            color: #0070FE; /* Change color on hover */
         }
     </style>
 </head>
