--- a/index.HTML
+++ b/index.HTML
@@ -237,15 +237,13 @@
         }
 
         .footer-logo {
-            bottom: -98px; /* Adjust as needed */
-            left: 20px; /* Adjust as needed */
             width: 150px;
             height: auto;
         }
 
         .footer-logo img {
-            width: 233px; /* Adjust the width as needed */
-            height: auto; /* Automatically adjust height to maintain aspect ratio */
+            width: 150px;
+            height: auto;
             margin-left: 20px;
         }
 
@@ -329,40 +327,28 @@
             <img src="img/logo.svg" alt="Main Logo">
         </div>
         <div class="content">
-            <div class="round-container">
-                <div class="text">
-                    <h1 class="biggest-text">UNFILTERED</h1>
-                    <h2 class="medium-text">PARADISE</h2>
-                    <div class="lines">
-                        <div class="normal-text-container">
-                            <span class="line line-left"></span>
-                            <p class="normal-text">€8.95 + TAX/MO</p>
-                            <span class="line line-right"></span>
-                            <div class="image-container">
-                                <img src="img/4khdr.svg" alt="4khdr">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <video class="background-video" loop muted playsinline poster="img/poster.jpg">
-                    <source src="img/" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
+            <!-- Content goes here -->
         </div>
     </div>
     <div class="button-container">
         <a href="http://patreon.com/onlybeach" class="button">Buy Now</a>
     </div>
 
-    <div class="footer-logo">
-        <img src="img/logo.svg" alt="Footer Logo">
-    </div>
-
-    <div class="footer-links">
-        <a href="#" class="footer-link">Terms</a>
-        <a href="#" class="footer-link">Contact Us</a>
-    </div>
+    <table style="width: 100%;">
+        <tr>
+            <td>
+                <div class="footer-logo">
+                    <img src="img/logo.svg" alt="Footer Logo">
+                </div>
+            </td>
+            <td style="text-align: right;">
+                <div class="footer-links">
+                    <a href="#" class="footer-link">Terms</a>
+                    <a href="#" class="footer-link">Contact Us</a>
+                </div>
+            </td>
+        </tr>
+    </table>
 
     <div class="footer-line"></div>
 
